# Linux1-task

./: CMakeLists.txt  client.c  includes.h  main.c
